Complete generate exam version

--- a/OnlineExaminationSystem/Areas/Administrator/Views/Registration/Index.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Registration/Index.cshtml
@@ -5,42 +5,52 @@
     ViewBag.Page = "registrations";
 }
 
-<h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Add New Registration", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            Course
-        </th>
-        <th>
-            Instructor
-        </th>
-        <th>
-            Semester
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Course.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Instructor.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Semester.SemesterTitle)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.RegistrationId }) |
-            @Html.ActionLink("Students", "Students", new { id = item.RegistrationId }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.RegistrationId })
-        </td>
-    </tr>
-}
+<div class="row">
+    <div class="col-md-12">
+        <div class="table-responsive">
+            <table class="table table-striped table-bordered table-hover dataTable no-footer">
+                <thead>
+                    <tr>
+                        <th>
+                            Course
+                        </th>
+                        <th>
+                            Instructor
+                        </th>
+                        <th>
+                            Semester
+                        </th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Course.Title)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Instructor.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Semester.SemesterTitle)
+                            </td>
+                            <td>
+                                @Html.ActionLink("Edit", "Edit", new { id = item.RegistrationId }) |
+                                @Html.ActionLink("Students", "Students", new { id = item.RegistrationId }) |
+                                @Html.ActionLink("Delete", "Delete", new { id = item.RegistrationId })
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
-</table>
