--- a/OnlineExaminationSystem/Areas/Administrator/Views/Students/Index.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Students/Index.cshtml
@@ -4,10 +4,9 @@
     ViewBag.Title = "student";
     ViewBag.Page = "students";
 }
-<h2>Students</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Add New Student", "Create")
 </p>
 <div class="row">
     <div class="col-md-12">
