--- a/OnlineExaminationSystem/Areas/InstructorArea/Views/Answers/Index.cshtml
+++ b/OnlineExaminationSystem/Areas/InstructorArea/Views/Answers/Index.cshtml
@@ -41,7 +41,7 @@
                                         @Html.DisplayFor(modelItem => item.AnswerText)
                                     </td>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.IsCorrectAnswer)
+                                        @(item.IsCorrectAnswer ? "Correct" : "Wrong")
                                     </td>
                                     <td>
                                         @Html.ActionLink("Edit", "Edit", new { id = item.AnswerId })
