--- a/OnlineExaminationSystem/Areas/InstructorArea/Views/Exams/Index.cshtml
+++ b/OnlineExaminationSystem/Areas/InstructorArea/Views/Exams/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Exams";
 }
 
-<h2>Index</h2>
+<h2>Exams</h2>
 
 <select class="form-control select-reg" data-url="@Url.Action("Select")">
     <option> -- Select Course -- </option>
@@ -38,25 +38,73 @@
                                 Exam( @(examCounter++) ) -> from: @exam.StartDate.ToString() to: @exam.EndDate.ToString()
                             </div>
                             <div class="panel-body">
-                                <div class="row">
-                                    <div class="col-md-4">@Html.LabelFor(modelItem => exam.NumberOfHighQuestion)</div>
-                                    <div class="col-md-2">@exam.NumberOfHighQuestion</div>
-                                    <div class="col-md-4">@Html.LabelFor(modelItem => exam.HighQuestionScore)</div>
-                                    <div class="col-md-2">@exam.HighQuestionScore</div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-4">@Html.LabelFor(modelItem => exam.NumberOfMediumQuestion)</div>
-                                    <div class="col-md-2">@exam.NumberOfMediumQuestion</div>
-                                    <div class="col-md-4">@Html.LabelFor(modelItem => exam.MediumQuestionScore)</div>
-                                    <div class="col-md-2">@exam.MediumQuestionScore</div>
-                                </div>
+                                <fieldset>
+                                    <legend>MCQ Questions</legend>
 
-                                <div class="row">
-                                    <div class="col-md-4">@Html.LabelFor(modelItem => exam.NumberOfLowQuestion)</div>
-                                    <div class="col-md-2">@exam.NumberOfLowQuestion</div>
-                                    <div class="col-md-4">@Html.LabelFor(modelItem => exam.LowQuestionScore)</div>
-                                    <div class="col-md-2">@exam.LowQuestionScore</div>
-                                </div>
+                                    <div class="row">
+                                        <div class="col-md-4">@Html.LabelFor(modelItem => exam.MCQHigh)</div>
+                                        <div class="col-md-2">@exam.MCQHigh</div>
+                                        <div class="col-md-4">@Html.LabelFor(modelItem => exam.MCQHighScore)</div>
+                                        <div class="col-md-2">@exam.MCQHighScore</div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-4">@Html.LabelFor(modelItem => exam.MCQMedium)</div>
+                                        <div class="col-md-2">@exam.MCQMedium</div>
+                                        <div class="col-md-4">@Html.LabelFor(modelItem => exam.MCQMediumScore)</div>
+                                        <div class="col-md-2">@exam.MCQMediumScore</div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-4">@Html.LabelFor(modelItem => exam.MCQLow)</div>
+                                        <div class="col-md-2">@exam.MCQLow</div>
+                                        <div class="col-md-4">@Html.LabelFor(modelItem => exam.MCQLowScore)</div>
+                                        <div class="col-md-2">@exam.MCQLowScore</div>
+                                    </div>
+                                </fieldset>
+                                <fieldset>
+                                    <legend>Complete Questions</legend>
+
+                                    <div class="row">
+                                        <div class="col-md-4">@Html.LabelFor(modelItem => exam.CompleteHigh)</div>
+                                        <div class="col-md-2">@exam.CompleteHigh</div>
+                                        <div class="col-md-4">@Html.LabelFor(modelItem => exam.CompleteHighScore)</div>
+                                        <div class="col-md-2">@exam.CompleteHighScore</div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-4">@Html.LabelFor(modelItem => exam.CompleteMedium)</div>
+                                        <div class="col-md-2">@exam.CompleteMedium</div>
+                                        <div class="col-md-4">@Html.LabelFor(modelItem => exam.CompleteMediumScore)</div>
+                                        <div class="col-md-2">@exam.CompleteMediumScore</div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-4">@Html.LabelFor(modelItem => exam.CompleteLow)</div>
+                                        <div class="col-md-2">@exam.CompleteLow</div>
+                                        <div class="col-md-4">@Html.LabelFor(modelItem => exam.CompleteLowScore)</div>
+                                        <div class="col-md-2">@exam.CompleteLowScore</div>
+                                    </div>
+                                </fieldset>
+                                <fieldset>
+                                    <legend>TrueFalse Questions</legend>
+
+                                    <div class="row">
+                                        <div class="col-md-4">@Html.LabelFor(modelItem => exam.TrueFalseHigh)</div>
+                                        <div class="col-md-2">@exam.TrueFalseHigh</div>
+                                        <div class="col-md-4">@Html.LabelFor(modelItem => exam.TrueFalseHighScore)</div>
+                                        <div class="col-md-2">@exam.TrueFalseHighScore</div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-4">@Html.LabelFor(modelItem => exam.TrueFalseMedium)</div>
+                                        <div class="col-md-2">@exam.TrueFalseMedium</div>
+                                        <div class="col-md-4">@Html.LabelFor(modelItem => exam.TrueFalseMediumScore)</div>
+                                        <div class="col-md-2">@exam.TrueFalseMediumScore</div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-4">@Html.LabelFor(modelItem => exam.TrueFalseLow)</div>
+                                        <div class="col-md-2">@exam.TrueFalseLow</div>
+                                        <div class="col-md-4">@Html.LabelFor(modelItem => exam.TrueFalseLowScore)</div>
+                                        <div class="col-md-2">@exam.TrueFalseLowScore</div>
+                                    </div>
+                                </fieldset>
+                             
                                 @if (exam.ExamId.Equals(Model.SelectedExamId, StringComparison.OrdinalIgnoreCase) && ViewData.ModelState.Values.Any(ms => ms.Errors.Count > 0))
                                 {
                                     <div class="row">
