--- a/OnlineExaminationSystem/Areas/InstructorArea/Views/Shared/_Layout.cshtml
+++ b/OnlineExaminationSystem/Areas/InstructorArea/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                         <a class="@((ViewBag.Page == "questions") ? "active-menu" : "")" href="/instructor/"><i class="fa fa-question-circle fa-2x"></i> Questions</a>
                     </li>
                     <li>
-                        <a class="@((ViewBag.Page == "exams") ? "active-menu" : "")" href="/instructor/"><i class="fa fa-print fa-2x"></i>Exams</a>
+                        <a class="@((ViewBag.Page == "exams") ? "active-menu" : "")" href="/instructor/exams"><i class="fa fa-print fa-2x"></i>Exams</a>
                     </li>
                     <li>
                         <a class="@((ViewBag.Page == "students") ? "active-menu" : "")" href="/instructor"><i class="fa fa-users fa-2x"></i> Students</a>
