Allow remove exam

--- a/OnlineExaminationSystem/Areas/InstructorArea/Views/Shared/_Layout.cshtml
+++ b/OnlineExaminationSystem/Areas/InstructorArea/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
                         <a class="@((ViewBag.Page == "chapters") ? "active-menu" : "")" href="/instructor/chapters"><i class="fa fa-pencil fa-2x"></i> Chapters</a>
                     </li>
                     <li>
-                        <a class="@((ViewBag.Page == "questions") ? "active-menu" : "")" href="/instructor/"><i class="fa fa-question-circle fa-2x"></i> Questions</a>
+                        <a class="@((ViewBag.Page == "questions") ? "active-menu" : "")" href="/instructor/chapters"><i class="fa fa-question-circle fa-2x"></i> Questions</a>
                     </li>
                     <li>
                         <a class="@((ViewBag.Page == "exams") ? "active-menu" : "")" href="/instructor/exams"><i class="fa fa-print fa-2x"></i>Exams</a>
