--- a/OnlineExaminationSystem/Areas/Administrator/Views/Semesters/Create.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Semesters/Create.cshtml
@@ -1,8 +1,8 @@
 ﻿@model OES.Model.Examination.Semester
 
 @{
-    ViewBag.Title = "courses";
-    ViewBag.Page = "courses";
+    ViewBag.Title = "Semesters";
+    ViewBag.Page = "semester";
 }
 
 <h2>Create</h2>
