--- a/OnlineExaminationSystem/Views/Home/Index.cshtml
+++ b/OnlineExaminationSystem/Views/Home/Index.cshtml
@@ -262,12 +262,14 @@
             <article style="position: absolute; width:64%; opacity: 0;">
                 <div class=" cont span_2_of_3 client-main">
                     <div class="logo">
-                        <a href="#"><img src="images/logo.png" alt=""></a>
+                        <a href="#"></a>
                     </div>
                     <div class="slide-text">
-                        <p>Examination Online System</p>
-                        <span> </span>
-                    </div>
+                        <p><font color="#00008B"> <b><font size="5"><center></center>Examination Online System </font> </b></p>
+                       
+
+                            <span> </span>
+</div>
                     <div class="clearfix"> </div>
                 </div>
             </article>
